--- a/leaderboard.html
+++ b/leaderboard.html
@@ -52,7 +52,7 @@
         </script>
 
         <div class="navbar">
-        <p onclick="switchPage(`info.html`)">Info</p>
+        <p onclick="switchPage(`index.html`)">Info</p>
         <p onclick="switchPage(`leaderboard.html`)">Leaderboard</p>
         <p onclick="switchPage(`discord`)">Discord</p>
         </div>
