--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
         <center>
             <h1></h1>
             <img style = "border-radius: 10%;"src = "img/logo.png" alt = "icon" height="250" width="300">
-            <p>SOB is a clan for <a href="https://beta.deeeep.io/">deeeep.io</a>, we strive to cleanse the seas of beaners and the clans they are in such as X12 which is known for raiding TFFA and FFA servers.</p>
+            <p class = "body">SOB is a clan for <a href="https://beta.deeeep.io/">deeeep.io</a>, we strive to cleanse the seas of beaners and the clans they are in such as X13 which is known for raiding TFFA and FFA servers.</p>
         </center>
 </html>
